--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!doctype html>
-<html lang="en" class="data-theme">
+<html lang="en" class="theme-dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>R-Ecom</title>
+
+    <style>
+      .dark-body{
+        background: #1b1b1b;
+        color: white
+      };
+
+      .light-body{
+        background: white;
+        color:black;
+      }
+    </style>
   </head>
-  <body>
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
